platform/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab
  template:
    metadata:
      labels:
        app: lab
    spec:
      containers:
        - name: lab
          image: rodrigodiez/lab.rodrigodiez.io:${CIRCLE_SHA1}
          ports:
            - containerPort: 8080
