platform/k8s/manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: lab
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab
  template:
    metadata:
      labels:
        app: lab
    spec:
      containers:
        - name: lab
          image: rodrigodiez/lab.rodrigodiez.io:e0a7157ae0c6dbf411ef442804de789bcb7e9af6
          ports:
            - containerPort: 8080
