platform/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lab-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: lab.rodrigodiez.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: lab
              servicePort: 80
